[package]
name = "hr-gen"
version = "0.1.0"
edition = "2021"
description = "A helper tool to name HUBERemote client executables"
repository = "https://github.com/HUBERION/HUBERemote-client-generator"
authors = ["Luca Suntinger <sunti27@protonmail.com>", "Raphael Ob. <raphael.ob@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tokio = { version = "1.0", features = ["fs", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }